Wierd kind of preamble

--- a/2017-06-22-docker-intro.org
+++ b/2017-06-22-docker-intro.org
@@ -16,6 +16,9 @@ tags: [docker, intro]
 
 * Concept description
 
+  The purpose of following below is to unveil few questions about
+  =Docker= Eco-system.
+
 * Installation
 
   Seems like all you need is to follow up through the comprehensive
