--- a/2017-06-22-docker-intro.org
+++ b/2017-06-22-docker-intro.org
@@ -125,7 +125,7 @@ tags: [docker, intro]
 
    #+RESULTS:
    : REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
-   : hello-world         latest              1815c82652c0        10 months ago       1.84kB
+   : hello-world         latest              1815c82652c0        2 years ago         1.84kB
 
 ** Test execution
 
