--- a/2019-09-22-scrapy-brief-overview.org
+++ b/2019-09-22-scrapy-brief-overview.org
@@ -10,3 +10,122 @@ tags: [python3, emacs, scrapy overview]
 #+END_HTML
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
+* Installation Preparation
+  ~Scrapy~ is a large and complex package and requres several
+  additional packages to be install in a system-wide manner:
+  
+    #+BEGIN_SRC sh :results output :eval never-export
+    sudo apt-get install python-dev python-pip libxml2-dev libxslt1-dev zlib1g-dev libffi-dev libssl-dev
+    sudo apt-get install python3 python3-dev python3-venv
+    #+END_SRC
+
+* Virtual Environment
+    #+BEGIN_SRC sh :results output :eval never-export
+    virtualenv -p /usr/bin/python3  /usr/local/share/pyVenvs/alioth/scrapyVenv
+    ls -la /usr/local/share/pyVenvs/alioth/ | grep scrapy
+    #+END_SRC
+
+    #+RESULTS:
+    : Already using interpreter /usr/bin/python3
+    : Using base prefix '/usr'
+    : New python executable in /usr/local/share/pyVenvs/alioth/scrapyVenv/bin/python3
+    : Also creating executable in /usr/local/share/pyVenvs/alioth/scrapyVenv/bin/python
+    : Installing setuptools, pkg_resources, pip, wheel...done.
+    : drwxr-sr-x 6 alioth staff 4096 Sep 22 12:40 scrapyVenv
+
+  
+* Activate your new ~venv~
+
+    #+BEGIN_SRC elisp :results output :eval never-export
+    (pyvenv-activate "/usr/local/share/pyVenvs/alioth/scrapyVenv")
+    #+END_SRC
+
+    #+RESULTS:
+
+* Installing ~scrapy~ itself
+
+    #+BEGIN_SRC sh :results output :eval never-export
+    pip install scrapy
+    cd /usr/local/share/pyVenvs/alioth/scrapyVenv
+    tree | grep scrapy
+    #+END_SRC
+
+    #+RESULTS:
+    #+begin_example
+    Collecting scrapy
+      Downloading https://files.pythonhosted.org/packages/29/4b/585e8e111ffb01466c59281f34febb13ad1a95d7fb3919fd57c33fc732a5/Scrapy-1.7.3-py2.py3-none-any.whl (234kB)
+    Collecting cssselect>=0.9 (from scrapy)
+      Using cached https://files.pythonhosted.org/packages/3b/d4/3b5c17f00cce85b9a1e6f91096e1cc8e8ede2e1be8e96b87ce1ed09e92c5/cssselect-1.1.0-py2.py3-none-any.whl
+    Collecting parsel>=1.5 (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/86/c8/fc5a2f9376066905dfcca334da2a25842aedfda142c0424722e7c497798b/parsel-1.5.2-py2.py3-none-any.whl
+    Collecting w3lib>=1.17.0 (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/6a/45/1ba17c50a0bb16bd950c9c2b92ec60d40c8ebda9f3371ae4230c437120b6/w3lib-1.21.0-py2.py3-none-any.whl
+    Collecting PyDispatcher>=2.0.5 (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/cd/37/39aca520918ce1935bea9c356bcbb7ed7e52ad4e31bff9b943dfc8e7115b/PyDispatcher-2.0.5.tar.gz
+    Collecting service-identity (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/e9/7c/2195b890023e098f9618d43ebc337d83c8b38d414326685339eb024db2f6/service_identity-18.1.0-py2.py3-none-any.whl
+    Collecting pyOpenSSL (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/01/c8/ceb170d81bd3941cbeb9940fc6cc2ef2ca4288d0ca8929ea4db5905d904d/pyOpenSSL-19.0.0-py2.py3-none-any.whl (53kB)
+    Collecting six>=1.5.2 (from scrapy)
+      Using cached https://files.pythonhosted.org/packages/73/fb/00a976f728d0d1fecfe898238ce23f502a721c0ac0ecfedb80e0d88c64e9/six-1.12.0-py2.py3-none-any.whl
+    Collecting lxml; python_version != "3.4" (from scrapy)
+      Using cached https://files.pythonhosted.org/packages/85/01/544faf6443e0a81cde4858f8941194825fab9e5de3c73f54879c3c0dc181/lxml-4.4.1-cp35-cp35m-manylinux1_x86_64.whl
+    Collecting Twisted>=13.1.0; python_version != "3.4" (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/4d/fa/3ad1fbb8084a88afb5735117699010c69e1567e01ae574dbb7c488c8edbc/Twisted-19.7.0-cp35-cp35m-manylinux1_x86_64.whl (3.1MB)
+    Collecting queuelib (from scrapy)
+      Downloading https://files.pythonhosted.org/packages/4c/85/ae64e9145f39dd6d14f8af3fa809a270ef3729f3b90b3c0cf5aa242ab0d4/queuelib-1.5.0-py2.py3-none-any.whl
+    Collecting pyasn1 (from service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/a1/71/8f0d444e3a74e5640a3d5d967c1c6b015da9c655f35b2d308a55d907a517/pyasn1-0.4.7-py2.py3-none-any.whl (76kB)
+    Collecting pyasn1-modules (from service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/be/70/e5ea8afd6d08a4b99ebfc77bd1845248d56cfcf43d11f9dc324b9580a35c/pyasn1_modules-0.2.6-py2.py3-none-any.whl (95kB)
+    Collecting cryptography (from service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/97/18/c6557f63a6abde34707196fb2cad1c6dc0dbff25a200d5044922496668a4/cryptography-2.7-cp34-abi3-manylinux1_x86_64.whl (2.3MB)
+    Collecting attrs>=16.0.0 (from service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/23/96/d828354fa2dbdf216eaa7b7de0db692f12c234f7ef888cc14980ef40d1d2/attrs-19.1.0-py2.py3-none-any.whl
+    Collecting zope.interface>=4.4.2 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/0c/dc/d715a3f2f9df4e0440e67b1dc654bcfb6dc11aac8296353eaf56164b8f01/zope.interface-4.6.0-cp35-cp35m-manylinux1_x86_64.whl (167kB)
+    Collecting Automat>=0.3.0 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/a3/86/14c16bb98a5a3542ed8fed5d74fb064a902de3bdd98d6584b34553353c45/Automat-0.7.0-py2.py3-none-any.whl
+    Collecting PyHamcrest>=1.9.0 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/9a/d5/d37fd731b7d0e91afcc84577edeccf4638b4f9b82f5ffe2f8b62e2ddc609/PyHamcrest-1.9.0-py2.py3-none-any.whl (52kB)
+    Collecting hyperlink>=17.1.1 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/7f/91/e916ca10a2de1cb7101a9b24da546fb90ee14629e23160086cf3361c4fb8/hyperlink-19.0.0-py2.py3-none-any.whl
+    Collecting constantly>=15.1 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/b9/65/48c1909d0c0aeae6c10213340ce682db01b48ea900a7d9fce7a7910ff318/constantly-15.1.0-py2.py3-none-any.whl
+    Collecting incremental>=16.10.1 (from Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/f5/1d/c98a587dc06e107115cf4a58b49de20b19222c83d75335a192052af4c4b7/incremental-17.5.0-py2.py3-none-any.whl
+    Collecting asn1crypto>=0.21.0 (from cryptography->service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/ea/cd/35485615f45f30a510576f1a56d1e0a7ad7bd8ab5ed7cdc600ef7cd06222/asn1crypto-0.24.0-py2.py3-none-any.whl (101kB)
+    Collecting cffi!=1.11.3,>=1.8 (from cryptography->service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/62/76/135eeffe0089e6724bdd65c1bf9f1654db9b47783e65b8d9f1454c540d8b/cffi-1.12.3-cp35-cp35m-manylinux1_x86_64.whl (429kB)
+    Requirement already satisfied: setuptools in /usr/local/share/pyVenvs/alioth/scrapyVenv/lib/python3.5/site-packages (from zope.interface>=4.4.2->Twisted>=13.1.0; python_version != "3.4"->scrapy) (41.2.0)
+    Collecting idna>=2.5 (from hyperlink>=17.1.1->Twisted>=13.1.0; python_version != "3.4"->scrapy)
+      Downloading https://files.pythonhosted.org/packages/14/2c/cd551d81dbe15200be1cf41cd03869a46fe7226e7450af7a6545bfc474c9/idna-2.8-py2.py3-none-any.whl (58kB)
+    Collecting pycparser (from cffi!=1.11.3,>=1.8->cryptography->service-identity->scrapy)
+      Downloading https://files.pythonhosted.org/packages/68/9e/49196946aee219aead1290e00d1e7fdeab8567783e83e1b9ab5585e6206a/pycparser-2.19.tar.gz (158kB)
+    Building wheels for collected packages: PyDispatcher, pycparser
+      Building wheel for PyDispatcher (setup.py): started
+      Building wheel for PyDispatcher (setup.py): finished with status 'done'
+      Created wheel for PyDispatcher: filename=PyDispatcher-2.0.5-cp35-none-any.whl size=11517 sha256=fb519e0f01cf984038bb326495f5bee63623608b14dfd66c84c5d73a75addd34
+      Stored in directory: /home/alioth/.cache/pip/wheels/88/99/96/cfef6665f9cb1522ee6757ae5955feedf2fe25f1737f91fa7f
+      Building wheel for pycparser (setup.py): started
+      Building wheel for pycparser (setup.py): finished with status 'done'
+      Created wheel for pycparser: filename=pycparser-2.19-py2.py3-none-any.whl size=111029 sha256=b3f96e6af841312ff1b1e55151d6f72dbd8448a64702fce8c4d0075384a04c6a
+      Stored in directory: /home/alioth/.cache/pip/wheels/f2/9a/90/de94f8556265ddc9d9c8b271b0f63e57b26fb1d67a45564511
+    Successfully built PyDispatcher pycparser
+    Installing collected packages: cssselect, lxml, six, w3lib, parsel, PyDispatcher, pyasn1, pyasn1-modules, asn1crypto, pycparser, cffi, cryptography, attrs, service-identity, pyOpenSSL, zope.interface, Automat, PyHamcrest, idna, hyperlink, constantly, incremental, Twisted, queuelib, scrapy
+    Successfully installed Automat-0.7.0 PyDispatcher-2.0.5 PyHamcrest-1.9.0 Twisted-19.7.0 asn1crypto-0.24.0 attrs-19.1.0 cffi-1.12.3 constantly-15.1.0 cryptography-2.7 cssselect-1.1.0 hyperlink-19.0.0 idna-2.8 incremental-17.5.0 lxml-4.4.1 parsel-1.5.2 pyOpenSSL-19.0.0 pyasn1-0.4.7 pyasn1-modules-0.2.6 pycparser-2.19 queuelib-1.5.0 scrapy-1.7.3 service-identity-18.1.0 six-1.12.0 w3lib-1.21.0 zope.interface-4.6.0
+    │   ├── scrapy
+    │       │   ├── scrapy
+    │       │   │   │   │   └── scrapy.cfg
+    #+end_example
+
+* Test it Up
+
+    #+BEGIN_SRC python :results output :eval never-export
+    import scrapy
+    #+END_SRC
+
+    #+RESULTS:
+
+* Success!
