--- a/2019-10-03-toy-tasks.org
+++ b/2019-10-03-toy-tasks.org
@@ -23,3 +23,26 @@ print calcAngle(3, 30)
 # 75
 print calcAngle(12, 30)
 # 165
+
+* Arithmetics in a pyramid representation
+
+
+  Hi, here's your problem today. This problem was recently asked by
+  Apple:
+
+  You are given a binary tree representation of an arithmetic
+  expression. In this tree, each leaf is an integer value,, and a
+  non-leaf node is one of the four operations: '+', '-', '*', or '/'.
+
+  Write a function that takes this tree and evaluates the expression.
+
+  Example:
+
+    *
+   / \
+ +    +
+/ \  / \
+3  2  4  5
+
+This is a representation of the expression (3 + 2) * (4 + 5), and
+should return 45.
