Book separation by its category and tag set

--- a/2020-12-15-python-inside-out-initial.org
+++ b/2020-12-15-python-inside-out-initial.org
@@ -3,9 +3,9 @@
 layout: post
 title: Python
 tagline: " inside out dissection"
-permalink: /python/first_book.html
-categories: [Learning Technology, Python]
-tags: [testing]
+permalink: /python/book/introduction.html
+categories: [Python Inside Out]
+tags: [book, intro]
 ---
 #+END_EXPORT
 
