An initial gestation stage arrangement

--- a/2020-12-15-python-inside-out-initial.org
+++ b/2020-12-15-python-inside-out-initial.org
@@ -14,25 +14,26 @@ tags: [book, intro]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
 
+* Gestation                                                        :noexport:
+
+** Core ideas:
+
+   - Black (Pandorra) Box approach;
+   - Programming languages genealygy:
+     + Atavisms:
+       + 72 char per string;
+   - Codex as a phenomena disclosure;
+   - Related material allocation on two pages at once;
+   - Conversion into a fiction book;
+   - Pomodoro technique realization;
+
+** Primary material gathering;
+
+** Indexing as an ordered sequence;
+
+** Wrapping and extension.
+
+
 * Intro
 
-** Gestation
-
-*** Core ideas:
-
-    - Black (Pandorra) Box approach;
-    - Programming languages genealygy:
-      + Atavisms:
-	+ 72 char per string;
-    - Codex as a phenomena disclosure;
-    - Related material allocation on two pages at once;
-    - Conversion into a fiction book;
-    - Pomodoro technique realization;
-
-*** Primary material gathering;
-
-*** Indexing as an ordered sequence;
-
-*** Wrapping and extension.
-
-
+  The _noexport_ tag test
