Up-to-date the existing content

--- a/2016-08-25-how-to-evaluate.org
+++ b/2016-08-25-how-to-evaluate.org
@@ -19,10 +19,10 @@ tags: [emacs, org-mode, babel]
      #+END_SRC
 
      #+RESULTS:
-     : GNU Emacs 24.5.1
-     : Copyright (C) 2015 Free Software Foundation, Inc.
+     : GNU Emacs 27.1
+     : Copyright (C) 2020 Free Software Foundation, Inc.
      : GNU Emacs comes with ABSOLUTELY NO WARRANTY.
-     : You may redistribute copies of Emacs
+     : You may redistribute copies of GNU Emacs
      : under the terms of the GNU General Public License.
      : For more information about these matters, see the file named COPYING.
 
@@ -35,7 +35,7 @@ tags: [emacs, org-mode, babel]
      #+END_SRC
 
      #+RESULTS:
-     : 8.3.5   
+     : 9.4.4
 
 ** Language support
 
