--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -3,9 +3,9 @@
 layout: post
 title: Dissecting Python
 tagline: " inside out"
-permalink: /python/book/introduction.html
+permalink: /python/books/disecting_python.html
 categories: [Python Dissection]
-tags: [book, intro]
+tags: [book, template]
 ---
 #+END_EXPORT
 
