Minor correction with LangTool

--- a/2019-01-04-time-management.org
+++ b/2019-01-04-time-management.org
@@ -29,7 +29,7 @@ tags: [agenda, time-management]
   produce some unique and ingenious stuff.
 
   Reasonable to emphasize that relation depending on the main aim of
-  your activity - high hopes require a lot of time. So, what if try to
+  your activity — high hopes require a lot of time. So, what if try to
   tame your personal time-table and define it on several hundreds of
   days ahead with a much achievable clarity and order.
 
