--- a/2016-08-24-index.org
+++ b/2016-08-24-index.org
@@ -2,7 +2,7 @@
 ---
 layout: page
 title: Intro
-tagline: 'Cook it gently._/\/\/^\/\/\/-<8<'
+tagline: 'Cook it gently.\/\/\/^\/\/\/-%'
 permalink: /index.html
 categories: [Emacs, Data Science]
 tags: [concept, overview]
