--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -119,19 +119,17 @@ tags: [book, template]
 * Relevant quotes
     #+BEGIN_QUOTE
     Programs must be written for people to read, and only incidentally
-      for machines to execute."
-   #+HTML: <p align="right">
-   - Abelson & Sussman, SICP, preface to the first edition
-   #+HTML: </p>   
+    for machines to execute."
+
+   - *Abelson & Sussman, SICP, preface to the first edition*
    #+END_QUOTE
 
    -----
    #+BEGIN_QUOTE
     "Short words are best and the old words when short are best of
       all."
-   #+HTML: <p align="right">
-   - Winston Churchill
-   #+HTML: </p>   
+
+   - *Winston Churchill*
    #+END_QUOTE
 
    -----
@@ -139,18 +137,16 @@ tags: [book, template]
     #+BEGIN_QUOTE
     “The glass is neither half empty nor half full. It’s simply larger
       than it needs to be.”
-   #+HTML: <p align="right">
-   - Grace Hopper
-   #+HTML: </p>   
+
+   - *Grace Hopper*
    #+END_QUOTE
 
    -----
 
    #+BEGIN_QUOTE
     “Manage things. Lead people.”
-   #+HTML: <p align="right">
-   - Grace Hopper
-   #+HTML: </p>   
+
+   - *Grace Hopper*
    #+END_QUOTE
 
    -----
