All infants are innnate learners by testing

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -215,6 +215,14 @@ misterious.
 
 * Testing as a nodal ology tool
 
+If you're observed an infant behavior strictly enough you might
+notice that it is a /silent (they can't talk yet) testing how things
+work/. With brisk ingenuity baby implements the series of conscious acts
+and it should be interpreted as experiments to examine the nature of
+events. Bear in mind its inborn origin, because every child do it
+absolutely autonomous, we got conclusion about a native and natural
+compatibility of humans and testing approach for study.
+
 
 ** A dumb testing set (test the test itself)
 
